# skimmdApp

./: .gitignore  README.md  index.html  issues.json  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Editor/: CodeBlockView.tsx  Editor.tsx  MermaidBlock.tsx  Outline.tsx  SearchBar.tsx  SentenceInsight.tsx  SlashMenu.tsx  SourceView.tsx  StatusBar.tsx  Toolbar.tsx  extensions.ts  searchExtension.ts
src/components/QuickOpen/: QuickOpen.tsx
src/components/Search/: GlobalSearch.tsx
src/components/Sidebar/: ContextMenu.tsx  FavoritesSection.tsx  FileInfo.tsx  FileItem.tsx  FolderItem.tsx  RecentsSection.tsx  Sidebar.tsx  WorkspaceSection.tsx
src/components/Tabs/: TabBar.tsx
src/components/ThemeToggle/: ThemeToggle.tsx
src/components/Toast/: Toast.tsx
src/components/WelcomeScreen/: WelcomeScreen.tsx
src/hooks/: useAutoSave.ts  useFileWatcher.ts
src/lib/: fs.ts  openai.ts  saveRegistry.ts
src/stores/: favoritesStore.ts  insightStore.ts  recentsStore.ts  tabStore.ts  themeStore.ts  uiStore.ts  workspaceStore.ts  zoomStore.ts
src/styles/: editor.css  globals.css
src/types/: index.ts
